# anki-addon-workbench

./: .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/anki_addon_workbench/: __init__.py  addon_copy.py  android.py  card_render.py  cli.py  config.py  dockerfile.py  local_docker.py  profile.py  resources.py  runner.py  scaffold.py  webkit.py
src/anki_addon_workbench/_resources/: __init__.py  deck_smoke_probe.py  probe_addon_template.py.tmpl  run_anki_direct.py  seed_anki_base.py  stealth_addon.py
src/anki_addon_workbench/gui/: __init__.py  _backend.py  core.py  models.py
src/anki_addon_workbench/templates/: __init__.py  android-emulator.Dockerfile  anki-xvfb.Dockerfile
tests/: test_addon_copy.py  test_android.py  test_card_render.py  test_cli.py  test_config.py  test_dockerfile.py  test_gui.py  test_gui_xvfb.py  test_local_docker.py  test_profile.py  test_runner.py  test_scaffold.py  test_webkit.py
tests/fixtures/probe_addon/: __init__.py
