[project]
name = "anki-addon-workbench"
version = "0.5.0"
description = "Disposable Anki profile, add-on install, Docker/Xvfb, and cross-platform card workbench tooling for Anki add-on and deck development."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Elvis Sik" }]
keywords = ["anki", "addon", "testing", "gui", "automation", "xvfb", "agent"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Topic :: Software Development :: Testing",
]
dependencies = [
  "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
gui = [
  "pyautogui>=0.9.54",
  "Pillow>=10.0",
]
webkit = [
  "playwright>=1.48.0",
]
dev = [
  "mypy>=1.13.0",
  "pytest>=8.0",
  "ruff>=0.6.0",
  "tomli>=2.0",
]

[project.urls]
Homepage = "https://github.com/elvis-sik/anki-addon-workbench"
Repository = "https://github.com/elvis-sik/anki-addon-workbench"
Issues = "https://github.com/elvis-sik/anki-addon-workbench/issues"

[project.scripts]
anki-workbench = "anki_addon_workbench.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
exclude-newer = "7 days"

[tool.uv.pip]
exclude-newer = "7 days"

[tool.anki-addon-workbench]
project_name = "Anki Add-on Workbench Fixture"
addon_package = "fixture_probe_addon"
source_root = "tests/fixtures/probe_addon"
include = ["__init__.py"]
probe_addon = "tests/fixtures/probe_addon"
probe_package = "zz_fixture_probe"
anki_version = "25.09"
profile = "User 1"
docker_image = "anki-addon-workbench-ci"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = false

[[tool.mypy.overrides]]
module = ["anki", "anki.*", "aqt", "aqt.*", "pyautogui", "PIL.*", "playwright", "playwright.*"]
ignore_missing_imports = true
